Bug 244611 - KAddressbook crashes when modifying name with multiple first names
Summary: KAddressbook crashes when modifying name with multiple first names
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-14 14:36 UTC by Thomas Bleher
Modified: 2010-07-22 12:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Bleher 2010-07-14 14:36:46 UTC
Application: kaddressbook (4.4.3)
KDE Platform Version: 4.4.4 (KDE 4.4.4)
Qt Version: 4.6.3
Operating System: Linux 2.6.32-5-686 i686
Distribution: Debian GNU/Linux testing (squeeze)

-- Information about the crash:
I have the following name in my address book (imported via vcf from KAddressbook 3.5.9):
FN:Aaaaa Bbbbb Ccccccc
N:Ccccccc;Aaaaa Bbbbb;;Frau;

(Name redacted, length is exactly the same as original (in case it matters)

What happened:
* I double clicked on the entry in KAddressbook
* The modify dialog opened, and the name field said: Frau Aaaaa Bbbbb Ccccccc; the display name field ("Anzeigen" in German) said Aaaaa Ccccccc
* I clicked on the display name field and selected "User defined" (Aaaaa Bbbbb Ccccccc was already written there, like in the FN field of the vcf)
* The display name field changed to an input field, with the intended name in it, and the field has input focus
* On clicking enter on that field (without editing anything), KAddressbook crashes reproducable

The crash can be reproduced every time.

 -- Backtrace:
Application: Adressbuch (kaddressbook), signal: Segmentation fault
[KCrash Handler]
#6  0xb6d82aa6 in QLineEdit::selectedText() const () from /usr/lib/libQtGui.so.4
#7  0xb75b28ef in KLineEdit::keyPressEvent(QKeyEvent*) () from /usr/lib/libkdeui.so.5
#8  0xb6978503 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#9  0xb6d8349b in QLineEdit::event(QEvent*) () from /usr/lib/libQtGui.so.4
#10 0xb75b3eac in KLineEdit::event(QEvent*) () from /usr/lib/libkdeui.so.5
#11 0xb6d42d40 in QComboBox::keyPressEvent(QKeyEvent*) () from /usr/lib/libQtGui.so.4
#12 0xb6978503 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#13 0xb6d4169c in QComboBox::event(QEvent*) () from /usr/lib/libQtGui.so.4
#14 0xb691a5cc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#15 0xb6922c71 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#16 0xb74c8b4a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#17 0xb645152b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#18 0xb691b3ae in ?? () from /usr/lib/libQtGui.so.4
#19 0xb69d3c70 in ?? () from /usr/lib/libQtGui.so.4
#20 0xb69d6150 in ?? () from /usr/lib/libQtGui.so.4
#21 0xb69aa507 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#22 0xb69d93e2 in ?? () from /usr/lib/libQtGui.so.4
#23 0xb55232f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#24 0xb5526fd8 in ?? () from /lib/libglib-2.0.so.0
#25 0xb55271b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#26 0xb647d095 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#27 0xb69d8f45 in ?? () from /usr/lib/libQtGui.so.4
#28 0xb644fb49 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#29 0xb644ff9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0xb6e57713 in QDialog::exec() () from /usr/lib/libQtGui.so.4
#31 0xb7286878 in MainWidget::editContact(Akonadi::Item const&) () from /usr/lib/libkaddressbookprivate.so.4
#32 0xb72875d7 in MainWidget::editItem(Akonadi::Item const&) () from /usr/lib/libkaddressbookprivate.so.4
#33 0xb7287ecd in MainWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkaddressbookprivate.so.4
#34 0xb645680a in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#35 0xb64651db in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#36 0xb775bec3 in Akonadi::EntityTreeView::doubleClicked(Akonadi::Item const&) () from /usr/lib/libakonadi-kde.so.4
#37 0xb775cee3 in Akonadi::EntityTreeView::Private::itemDoubleClicked(QModelIndex const&) () from /usr/lib/libakonadi-kde.so.4
#38 0xb775db68 in Akonadi::EntityTreeView::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libakonadi-kde.so.4
#39 0xb645680a in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#40 0xb64651db in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#41 0xb6eb19b3 in QAbstractItemView::doubleClicked(QModelIndex const&) () from /usr/lib/libQtGui.so.4
#42 0xb6f08357 in QTreeView::mouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#43 0xb697867e in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#44 0xb6d72883 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#45 0xb6e0d032 in QAbstractScrollArea::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#46 0xb6ec28c7 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#47 0xb6f0212c in QTreeView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#48 0xb6e0fa05 in ?? () from /usr/lib/libQtGui.so.4
#49 0xb64507ca in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#50 0xb691a5a9 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#51 0xb6921af7 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#52 0xb74c8b4a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#53 0xb645152b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#54 0xb6920a52 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#55 0xb69abd7c in ?? () from /usr/lib/libQtGui.so.4
#56 0xb69ab28b in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#57 0xb69d93e2 in ?? () from /usr/lib/libQtGui.so.4
#58 0xb55232f5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#59 0xb5526fd8 in ?? () from /lib/libglib-2.0.so.0
#60 0xb55271b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#61 0xb647d095 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#62 0xb69d8f45 in ?? () from /usr/lib/libQtGui.so.4
#63 0xb644fb49 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#64 0xb644ff9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#65 0xb64551cf in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#66 0xb691a667 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#67 0x0804c63d in _start ()

Possible duplicates by query: bug 243461, bug 243238, bug 242877, bug 242776, bug 238928.

Reported using DrKonqi
Comment 1 Tobias Koenig 2010-07-22 12:38:58 UTC
SVN commit 1152999 by tokoe:

Decouple the setEditable call from within a slot, this prevent
crashes when the contact editor dialog is closed by Enter inside
the DisplayNameEditWidget in custom mode.

BUG: 244611


 M  +8 -2      displaynameeditwidget.cpp  
 M  +1 -0      displaynameeditwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1152999