Decouple the setEditable call from within a slot, this prevent crashes when the contact editor dialog is closed by Enter inside the DisplayNameEditWidget in custom mode.

BUG: 244611

svn path=/branches/KDE/4.5/kdepimlibs/; revision=1152999